src/test/ui/nll/closure-requirements/escape-argument.stderr
note: No external requirements
  --> $DIR/escape-argument.rs:36:38
   |
36 |         let mut closure = expect_sig(|p, y| *p = y);
   |                                      ^^^^^^^^^^^^^
   |
   = note: defining type: DefId(0/1:9 ~ escape_argument[317d]::test[0]::{{closure}}[0]) with closure substs [
               i16,
               for<'r, 's> extern "rust-call" fn((&ReLateBound(DebruijnIndex { depth: 1 }, BrNamed(crate0:DefIndex(0:0), 'r)) mut &ReLateBound(DebruijnIndex { depth: 1 }, BrNamed(crate0:DefIndex(0:0), 's)) i32, &ReLateBound(DebruijnIndex { depth: 1 }, BrNamed(crate0:DefIndex(0:0), 's)) i32))
           ]

note: No external requirements
  --> $DIR/escape-argument.rs:30:1
   |
30 | / fn test() {
31 | |     let x = 44;
32 | |     let mut p = &x;
33 | |
...  |
41 | |     deref(p);
42 | | }
   | |_^
   |
   = note: defining type: DefId(0/0:3 ~ escape_argument[317d]::test[0]) with substs []

error[E0597]: `y` does not live long enough
  --> $DIR/escape-argument.rs:37:25
   |
37 |         closure(&mut p, &y);
   |                         ^^ borrowed value does not live long enough
38 |         //~^ ERROR `y` does not live long enough [E0597]
39 |     }
   |      - borrowed value only lives until here
40 | 
41 |     deref(p);
   |           - borrow later used here
   |
   = note: borrowed value must be valid for lifetime '_#6r...

error: aborting due to previous error

